Log in
Skip to main content
Skip to sidebar
Linked Applications
Loading…
Dashboards
Projects
Issues
Give feedback to Atlassian
Help
Jira Core help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Qt Creator
QTCREATORBUG-20730
QTC is not able to connect to QML debugger sometimes.
Log In
Closed
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Done
Priority:
P2: Important
Fix Version/s:
Qt Creator 4.7.0
Affects Version/s:
Qt Creator 4.7.0-beta2
Component/s:
Android Support
Labels:
None
Platform/s:
Android
,
macOS
Description
Sometimes QTC fails to connect to QML debugger.
Attachments
Gerrit Reviews
Options
Issue Only
Show All Reviews
Show Open Reviews
Show All Issues
Show Open Issues
No reviews matched the request. Check your Options in the drop-down menu of this sections header.
Activity
People
Assignee:
Vikas Pachdha
Reporter:
Vikas Pachdha
Votes:
0
Vote for this issue
Watchers:
1
Start watching this issue
Dates
Created:
05 Jul '18 09:34
Updated:
06 Jul '18 06:19
Resolved:
06 Jul '18 06:19
Gerrit Reviews
There are no open Gerrit changes
Show
There is 1 closed Gerrit change
Hide
There is 1 closed Gerrit change
Android: Use ipv4 host to connect to app in android
Gerrit Review: